# search

./: CMakeLists.txt  main.cpp
3rd/json/: CJsonObject.cpp  CJsonObject.h  cJSON.c  cJSON.h
index/: forward_index.h  indexer.cpp  indexer.h  invert_index.h
offline/: index_builder.cpp  index_builder.h
online/: search_logic.cpp  search_logic.h
service/: search.h  search_service.cpp  search_service.h
utils/: segment.h  singleton.h  spin_lock.cpp  spin_lock.h
